--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <base href="/ProcureScope/" />
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/src/assets/logo-with-bg.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
